@@ -10,6 +10,24 @@
 
 #include "GUIControl.h"
 
+class CInfoPortion
+{
+public:
+  CInfoPortion(int info, const CStdString &prefix, const CStdString &postfix)
+  {
+    m_info = info;
+    m_prefix = prefix;
+    m_postfix = postfix;
+    // filter our prefix and postfix for comma's and $$
+    m_prefix.Replace("$COMMA", ","); m_prefix.Replace("$$", "$");
+    m_postfix.Replace("$COMMA", ","); m_postfix.Replace("$$", "$");
+  };
+
+  int m_info;
+  CStdString m_prefix;
+  CStdString m_postfix;
+};
+
 /*!
  \ingroup controls
  \brief 
@@ -31,8 +49,8 @@ public:
   void ShowCursor(bool bShow = true);
   void SetCursorPos(int iPos);
   int GetCursorPos() const { return m_iCursorPos;};
-  void SetInfo(const vector<int> &vecInfo);
-  const vector<int> &GetInfo() const { return m_vecInfo; };
+  void SetInfo(int singleInfo);
+  int GetInfo() const { return m_singleInfo; };
   void SetWidthControl(bool bScroll);
   bool GetWidthControl() const { return m_ScrollInsteadOfTruncate; };
   void SetTruncate(bool bTruncate);
@@ -40,7 +58,7 @@ public:
   bool GetWrapMultiLine() const { return m_wrapMultiLine; };
   static void WrapText(CStdString &text, CGUIFont *font, float maxWidth);
 protected:
-  void ShortenPath();
+  CStdString ShortenPath(const CStdString &path);
 
 protected:
   CLabelInfo m_label;
@@ -50,10 +68,13 @@ protected:
   bool m_bShowCursor;
   int m_iCursorPos;
   DWORD m_dwCounter;
-  vector<int> m_vecInfo;
   // stuff for scrolling
   bool m_wrapMultiLine;
   bool m_ScrollInsteadOfTruncate;
   CScrollInfo m_ScrollInfo;
+
+  // multi-info stuff
+  int                   m_singleInfo;
+  vector<CInfoPortion>  m_multiInfo;
 };
 #endif
